# ToDo

./: README.md  dockerfile  main.py  pyproject.toml
database/: db.sqlite
models/: model.py  orm.py
repositories/: Repository.py
services/: UnitOfWork.py  service.py
templates/: base.html
