[tool.poetry]
name = "to-do"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
pydantic = "^2.4.2"

[tool.ruff]
select = ["ALL"]
ignore = ["D", "ANN", "T", "E501", "N", 'A003', 'ARG001', 'ERA001', 'INP001', "B008", 'W292', 'TCH002', 'BLE001', 'TCH001']
fixable = ["ALL"]
target-version = "py311"

[tool.black]
target-version = ['py311']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

